--- a/style.css
+++ b/style.css
@@ -8,3 +8,82 @@ html, body {
     width: 100%;
     height: 100%;
 }
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.6;
+    margin: 0;
+    padding: 20px;
+    background-color: #f8edeb;
+}
+
+.container {
+    max-width: 800px;
+    margin: auto;
+    overflow: hidden;
+    background: #ccd5ae;
+    border-radius: 5px;
+    padding: 20px;
+}
+
+h1 {
+    font-family: "Orelega One", serif;
+    font-weight: 400;
+    margin-bottom: 20px;
+}
+
+#task {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+#newTask {
+    padding: 10px;
+    width: 70%;
+    font-size: 18px;
+}
+
+button {
+    padding: 10px 20px;
+    color: rgb(17, 65, 155);
+    font-family: "Orelega One", serif;
+    font-weight: 400;
+    background-color: #eae2b7;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+li {
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 15px;
+    transition: transform 0.3s ease-in-out;
+}
+
+li.completed {
+    text-decoration: line-through;
+    opacity: 0.5;
+}
+
+li :hover {
+    transform: translateY(-3px);
+}
+
+.delete-btn {
+    background-color: #f44336;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 10px;
+    margin-left: auto;
+    font-size: 14px;
+    cursor: pointer;
+}
